force-app/main/default/objects/hed__Relationship_Lookup__c/hed__Relationship_Lookup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <label>Recherche de relation</label>
</CustomObject>