force-app/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Active__c.field-meta.xml
<CustomField>
    <fullName>hed__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this reciprocal lookup is active.</description>
    <inlineHelpText>Indique si ce lien réciproque est actif.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>