force-app/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Female__c.field-meta.xml
<CustomField>
    <fullName>hed__Female__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</description>
    <inlineHelpText>La valeur utilisée pour le paramètre de réciprocité si le champ Sexe ou Civilité du contact désigne une Femme.</inlineHelpText>
    <label>Female</label>
    <length>255</length>
    <type>Text</type>
</CustomField>